# MultiPlatform-EZGL

./: .gitignore  CMakeLists.txt  CopyFiles.text
ezgl/: CMakeLists.txt  EZGL.hpp
ezgl/geometry/: CMakeLists.txt  ELGeometry.cpp  ELGeometry.h
ezgl/platform/: CMakeLists.txt  ELAdapter.h  ELCompositionVertexBuffer.h  ELContext.cpp  ELContext.h  ELCppBase.h  ELCrossPlatformObject.h  ELPlatform.h  ELRenderPass.h  ELRenderPipline.h  ELRenderTarget.h  ELRenderer.h  ELTexture.h  ELVertexBuffer.cpp  ELVertexBuffer.h
ezgl/platform/impl_OpenGL/: ELGLAdapter.cpp  ELGLAdapter.h  ELRenderPass.cpp  ELRenderPipline.cpp  ELRenderTarget.cpp  ELRenderer.cpp  ELTexture.cpp  ELVertexBuffer.cpp
ezgl/platform/impl_OpenGL/soil/: SOIL.h  stb_image_aug.cc
ezgl/platform/types/: ELGeometryTypes.h  ELMatrix4.h  ELPixelFormat.h  ELTransform.h
ezgl/platform/utils/: ELAssets.cpp  ELFileUtil.cpp  ELFileUtil.h  ELUtils.h
ezgl/renderer/: CMakeLists.txt  (+9 more)
tests/: CMakeLists.txt
tests/platform/: AlphaTestTests.cpp  AlphaTestTests.h  BasicFlowTests.cpp  BasicFlowTests.h  BlendModeTests.cpp  BlendModeTests.h  CMakeLists.txt  DepthTestTests.cpp  DepthTestTests.h  IndexBufferTests.cpp  IndexBufferTests.h  MultiBufferTests.cpp  MultiBufferTests.h  StencilTestTests.cpp  StencilTestTests.h  TestScene.h  blend_fragment.glsl  fragment.glsl  main.cpp
tests/platform/Test Scenes/: AlphaTestTests.cpp  BasicFlowTests.cpp  BasicFlowTests.h  BlendModeTests.cpp  BlendModeTests.h  DepthTestTests.cpp  DepthTestTests.h  IndexBufferTests.cpp  IndexBufferTests.h  MultiBufferTests.cpp  StencilTestTests.cpp
(+49 files in other folders)
